# calc

./: CMakeLists.txt  README.md  calc.manifest
calc/: main.cpp
guitk/: CMakeLists.txt
guitk/core/: gkException.h  gkLogger.cpp  gkLogger.h  gkPoint.h  gkRect.h  gkString.cpp  gkString.h
guitk/res/: gkResource.h  gkResource.rc
guitk/widgets/: gkComboBox.cpp  gkComboBox.h  gkControl.cpp  gkControl.h  gkDialog.cpp  gkDialog.h  gkFrameWindow.cpp  gkFrameWindow.h  gkMainWindow.cpp  gkMainWindow.h  gkProgressBar.cpp  gkProgressBar.h  gkResource.h  gkSplitter.cpp  gkSplitter.h  gkStatusBar.cpp  gkStatusBar.h  gkTextEdit.cpp  gkTextEdit.h  gkWindow.cpp  gkWindow.h  gkWindowUtil.h
res/: resource.h  resource.rc
